# extmem-nlpa

./: .gitmodules  CMakeLists.txt  main_networkit_ba.cpp  main_polynomial_emgenpa.cpp
include/skewedpa/: defs.hpp
include/skewedpa/algorithms/externalmemory/: GeneralizedPATFP.hpp
include/skewedpa/decisiontrees/: DTreeBase.hpp  DTreeDeque.hpp  DTreeFixedLeaves.hpp  DTreeSplit.hpp
include/skewedpa/utils/: Polynomial.hpp
